--- a/files/登录/styles.css
+++ b/files/登录/styles.css
@@ -12,12 +12,12 @@
   position:absolute;
   z-index:0;
 }
-#u234 {
+#u239 {
   position:fixed;
   left:0px;
   top:0px;
 }
-#u234_state0 {
+#u239_state0 {
   position:relative;
   left:0px;
   top:0px;
@@ -25,7 +25,7 @@
   height:70px;
   background-image:none;
 }
-#u234_state0_content {
+#u239_state0_content {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -33,7 +33,7 @@
   width:1px;
   height:1px;
 }
-#u235_div {
+#u240_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -51,7 +51,7 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u235 {
+#u240 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -59,7 +59,7 @@
   width:1280px;
   height:70px;
 }
-#u235_text {
+#u240_text {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -68,7 +68,7 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u236_div {
+#u241_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -83,7 +83,7 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u236 {
+#u241 {
   border-width:0px;
   position:absolute;
   left:20px;
@@ -91,7 +91,7 @@
   width:64px;
   height:56px;
 }
-#u236_text {
+#u241_text {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -99,7 +99,7 @@
   width:60px;
   word-wrap:break-word;
 }
-#u237_div {
+#u242_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -117,7 +117,7 @@
   font-weight:400;
   font-style:normal;
 }
-#u237 {
+#u242 {
   border-width:0px;
   position:absolute;
   left:94px;
@@ -128,7 +128,7 @@
   font-weight:400;
   font-style:normal;
 }
-#u237_text {
+#u242_text {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -136,7 +136,7 @@
   width:185px;
   white-space:nowrap;
 }
-#u238_div {
+#u243_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -154,7 +154,7 @@
   font-weight:700;
   font-style:normal;
 }
-#u238 {
+#u243 {
   border-width:0px;
   position:absolute;
   left:323px;
@@ -165,7 +165,7 @@
   font-weight:700;
   font-style:normal;
 }
-#u238_text {
+#u243_text {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -173,7 +173,7 @@
   width:73px;
   white-space:nowrap;
 }
-#u239_div {
+#u244_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -191,7 +191,7 @@
   font-weight:700;
   font-style:normal;
 }
-#u239 {
+#u244 {
   border-width:0px;
   position:absolute;
   left:418px;
@@ -202,7 +202,7 @@
   font-weight:700;
   font-style:normal;
 }
-#u239_text {
+#u244_text {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -210,7 +210,7 @@
   width:73px;
   white-space:nowrap;
 }
-#u240_div {
+#u245_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -228,7 +228,7 @@
   font-weight:700;
   font-style:normal;
 }
-#u240 {
+#u245 {
   border-width:0px;
   position:absolute;
   left:527px;
@@ -239,7 +239,7 @@
   font-weight:700;
   font-style:normal;
 }
-#u240_text {
+#u245_text {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -247,37 +247,27 @@
   width:73px;
   white-space:nowrap;
 }
-#u241 {
+#u246 {
   border-width:0px;
   position:absolute;
-  left:314px;
+  left:310px;
   top:23px;
-  width:88px;
+  width:100px;
   height:39px;
   overflow:hidden;
+  background-image:url('../../resources/images/transparent.gif');
 }
-#u241_state0 {
+#u247 {
   border-width:0px;
   position:absolute;
-  left:0px;
-  top:0px;
-  width:88px;
+  left:514px;
+  top:23px;
+  width:100px;
   height:39px;
-  -ms-overflow-x:hidden;
-  overflow-x:hidden;
-  -ms-overflow-y:hidden;
-  overflow-y:hidden;
-  background-image:none;
+  overflow:hidden;
+  background-image:url('../../resources/images/transparent.gif');
 }
-#u241_state0_content {
-  border-width:0px;
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:1px;
-  height:1px;
-}
-#u242_div {
+#u248_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -295,7 +285,7 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u242 {
+#u248 {
   border-width:0px;
   position:absolute;
   left:274px;
@@ -303,7 +293,7 @@
   width:698px;
   height:448px;
 }
-#u242_text {
+#u248_text {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -312,7 +302,7 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u243_div {
+#u249_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -332,7 +322,7 @@
   font-size:36px;
   text-align:center;
 }
-#u243 {
+#u249 {
   border-width:0px;
   position:absolute;
   left:497px;
@@ -345,7 +335,7 @@
   font-size:36px;
   text-align:center;
 }
-#u243_text {
+#u249_text {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -353,7 +343,7 @@
   width:253px;
   white-space:nowrap;
 }
-#u244_img {
+#u250_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -361,7 +351,7 @@
   width:457px;
   height:239px;
 }
-#u244 {
+#u250 {
   border-width:0px;
   position:absolute;
   left:395px;
@@ -369,7 +359,7 @@
   width:457px;
   height:239px;
 }
-#u244_text {
+#u250_text {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -378,7 +368,7 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u245_img {
+#u251_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -386,7 +376,7 @@
   width:457px;
   height:41px;
 }
-#u245 {
+#u251 {
   border-width:0px;
   position:absolute;
   left:395px;
@@ -394,7 +384,7 @@
   width:457px;
   height:41px;
 }
-#u245_text {
+#u251_text {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -403,7 +393,7 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u246_img {
+#u252_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -411,7 +401,7 @@
   width:1446px;
   height:521px;
 }
-#u246 {
+#u252 {
   border-width:0px;
   position:absolute;
   left:14px;
@@ -419,7 +409,7 @@
   width:1446px;
   height:521px;
 }
-#u246_text {
+#u252_text {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -428,7 +418,7 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u247 {
+#u253 {
   border-width:0px;
   position:absolute;
   left:507px;
@@ -437,7 +427,7 @@
   height:26px;
   overflow:hidden;
 }
-#u247_state0 {
+#u253_state0 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -450,11 +440,71 @@
   overflow-y:hidden;
   background-image:none;
 }
-#u247_state0_content {
+#u253_state0_content {
   border-width:0px;
   position:absolute;
   left:0px;
   top:0px;
   width:1px;
   height:1px;
+}
+#u254_div {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:1280px;
+  height:250px;
+  background:inherit;
+  background-color:rgba(251, 251, 251, 1);
+  box-sizing:border-box;
+  border-width:1px;
+  border-style:solid;
+  border-color:rgba(121, 121, 121, 1);
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+}
+#u254 {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:959px;
+  width:1280px;
+  height:250px;
+}
+#u254_text {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:0px;
+  visibility:hidden;
+  word-wrap:break-word;
+}
+#u255_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:854px;
+  height:248px;
+}
+#u255 {
+  border-width:0px;
+  position:absolute;
+  left:213px;
+  top:960px;
+  width:854px;
+  height:248px;
+}
+#u255_text {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:0px;
+  visibility:hidden;
+  word-wrap:break-word;
 }
