--- a/files/购买登记/styles.css
+++ b/files/购买登记/styles.css
@@ -12,7 +12,7 @@
   position:absolute;
   z-index:0;
 }
-#u221_img {
+#u225_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -20,7 +20,7 @@
   width:1055px;
   height:667px;
 }
-#u221 {
+#u225 {
   border-width:0px;
   position:absolute;
   left:73px;
@@ -28,7 +28,7 @@
   width:1055px;
   height:667px;
 }
-#u221_text {
+#u225_text {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -37,12 +37,12 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u222 {
+#u226 {
   position:fixed;
   left:0px;
   top:0px;
 }
-#u222_state0 {
+#u226_state0 {
   position:relative;
   left:0px;
   top:0px;
@@ -50,7 +50,7 @@
   height:70px;
   background-image:none;
 }
-#u222_state0_content {
+#u226_state0_content {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -58,7 +58,7 @@
   width:1px;
   height:1px;
 }
-#u223_div {
+#u227_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -76,7 +76,7 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u223 {
+#u227 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -84,7 +84,7 @@
   width:1280px;
   height:70px;
 }
-#u223_text {
+#u227_text {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -93,7 +93,7 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u224_div {
+#u228_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -108,7 +108,7 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u224 {
+#u228 {
   border-width:0px;
   position:absolute;
   left:20px;
@@ -116,7 +116,7 @@
   width:64px;
   height:56px;
 }
-#u224_text {
+#u228_text {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -124,7 +124,7 @@
   width:60px;
   word-wrap:break-word;
 }
-#u225_div {
+#u229_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -142,7 +142,7 @@
   font-weight:400;
   font-style:normal;
 }
-#u225 {
+#u229 {
   border-width:0px;
   position:absolute;
   left:94px;
@@ -153,7 +153,7 @@
   font-weight:400;
   font-style:normal;
 }
-#u225_text {
+#u229_text {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -161,7 +161,7 @@
   width:185px;
   white-space:nowrap;
 }
-#u226_div {
+#u230_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -179,7 +179,7 @@
   font-weight:700;
   font-style:normal;
 }
-#u226 {
+#u230 {
   border-width:0px;
   position:absolute;
   left:323px;
@@ -190,7 +190,7 @@
   font-weight:700;
   font-style:normal;
 }
-#u226_text {
+#u230_text {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -198,7 +198,7 @@
   width:73px;
   white-space:nowrap;
 }
-#u227_div {
+#u231_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -216,7 +216,7 @@
   font-weight:700;
   font-style:normal;
 }
-#u227 {
+#u231 {
   border-width:0px;
   position:absolute;
   left:418px;
@@ -227,7 +227,7 @@
   font-weight:700;
   font-style:normal;
 }
-#u227_text {
+#u231_text {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -235,7 +235,7 @@
   width:73px;
   white-space:nowrap;
 }
-#u228_div {
+#u232_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -253,7 +253,7 @@
   font-weight:700;
   font-style:normal;
 }
-#u228 {
+#u232 {
   border-width:0px;
   position:absolute;
   left:527px;
@@ -264,7 +264,7 @@
   font-weight:700;
   font-style:normal;
 }
-#u228_text {
+#u232_text {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -272,7 +272,7 @@
   width:73px;
   white-space:nowrap;
 }
-#u229 {
+#u233 {
   border-width:0px;
   position:absolute;
   left:314px;
@@ -281,7 +281,7 @@
   height:39px;
   overflow:hidden;
 }
-#u229_state0 {
+#u233_state0 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -294,7 +294,7 @@
   overflow-y:hidden;
   background-image:none;
 }
-#u229_state0_content {
+#u233_state0_content {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -302,7 +302,17 @@
   width:1px;
   height:1px;
 }
-#u230_div {
+#u234 {
+  border-width:0px;
+  position:absolute;
+  left:514px;
+  top:23px;
+  width:100px;
+  height:39px;
+  overflow:hidden;
+  background-image:url('../../resources/images/transparent.gif');
+}
+#u235_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -320,7 +330,7 @@
   color:#FFFFFF;
   text-align:left;
 }
-#u230 {
+#u235 {
   border-width:0px;
   position:absolute;
   left:173px;
@@ -331,7 +341,7 @@
   color:#FFFFFF;
   text-align:left;
 }
-#u230_text {
+#u235_text {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -339,7 +349,7 @@
   width:296px;
   word-wrap:break-word;
 }
-#u231_div {
+#u236_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -357,7 +367,7 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u231 {
+#u236 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -365,7 +375,7 @@
   width:1280px;
   height:250px;
 }
-#u231_text {
+#u236_text {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -374,7 +384,7 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u232_img {
+#u237_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -382,7 +392,7 @@
   width:854px;
   height:248px;
 }
-#u232 {
+#u237 {
   border-width:0px;
   position:absolute;
   left:213px;
@@ -390,7 +400,7 @@
   width:854px;
   height:248px;
 }
-#u232_text {
+#u237_text {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -399,7 +409,7 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u233_div {
+#u238_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -415,7 +425,7 @@
   box-shadow:none;
   color:#FFFFFF;
 }
-#u233 {
+#u238 {
   border-width:0px;
   position:absolute;
   left:173px;
@@ -424,7 +434,7 @@
   height:16px;
   color:#FFFFFF;
 }
-#u233_text {
+#u238_text {
   border-width:0px;
   position:absolute;
   left:0px;
